# GPR-200-02-final-project

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/lib/: shader.cpp  texture.cpp  texture.h
core/lib/ewMath/: vec2.h  vec3.h  vec4.h
projectFiles/: CMakeLists.txt  main.cpp
projectFiles/finalProject/: CMakeLists.txt  main.cpp
projectFiles/finalProject/assets/: background.frag  background.vert  dragon.frag  dragon.vert
